--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,17 @@ before_install:
 #brew install srcclr
 #srcclr activate
 #srcclr scan --url https://github.com/srcclr/example-javascript-yarn
+# Skip updating shrinkwrap / lock
+  - "npm config set shrinkwrap false"
 
-  - "brew tap srcclr/srcclr"
+  # Remove all non-test dependencies
+  - "npm rm --save-dev connect-redis"
 
-  - "brew install srcclr"
-
+  # Update Node.js modules
+  - "test ! -d node_modules || npm prune"
+  - "test ! -d node_modules || npm rebuild"
+  - npm tap srcclr/srcclr
+  - npm install srcclr
 script:
   - "srcclr activate"
   - "srcclr scan --url https://github.com/srcclr/example-javascript-yarn"
