--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   # Update Node.js modules
   - "test ! -d node_modules || npm prune"
   - "test ! -d node_modules || npm rebuild"
-  - "npm tap srcclr/srcclr"
+ # - "npm tap srcclr/srcclr"
   - "npm install srcclr"
 script:
   - "srcclr activate"
