--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,16 @@ node_js:
   - "8.9"
 sudo: false
 cache:
-  directories:
-    - node_modules
+  yarn: true
 before_install:
 #brew tap srcclr/srcclr
 #brew install srcclr
 #srcclr activate
 #srcclr scan --url https://github.com/srcclr/example-javascript-yarn
 # Skip updating shrinkwrap / lock
-  - "npm config set shrinkwrap false"
-
-  # Remove all non-test dependencies
-  - "npm rm --save-dev connect-redis"
-
-  # Update Node.js modules
-  - "test ! -d node_modules || npm prune"
-  - "test ! -d node_modules || npm rebuild"
- # - "npm tap srcclr/srcclr"
-  - "npm install srcclr"
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  - export PATH="$HOME/.yarn/bin:$PATH"
+  - yarn srcclr
 script:
   - "srcclr activate"
   - "srcclr scan --url https://github.com/srcclr/example-javascript-yarn"
