--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
-  - "8.9"
+  - "iojs"
+  - "7
 sudo: false
 cache:
   yarn: true
@@ -10,8 +11,8 @@ before_install:
 #srcclr activate
 #srcclr scan --url https://github.com/srcclr/example-javascript-yarn
 # Skip updating shrinkwrap / lock
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
-  - export PATH="$HOME/.yarn/bin:$PATH"
+  #- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  #- export PATH="$HOME/.yarn/bin:$PATH"
   - yarn srcclr
 script:
   - "srcclr activate"
