--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
-language: node_js
-node_js:
-  - "iojs"
-  - "7
-sudo: false
+
 cache:
   yarn: true
 before_install:
@@ -15,8 +11,8 @@ before_install:
   #- export PATH="$HOME/.yarn/bin:$PATH"
   - yarn srcclr
 script:
-  - "srcclr activate"
-  - "srcclr scan --url https://github.com/srcclr/example-javascript-yarn"
+  - srcclr activate
+  - srcclr scan --url https://github.com/srcclr/example-javascript-yarn
 
 #after_success:
  # - bash <(curl -s https://s3-ap-southeast-1.amazonaws.com/ci-scripts/ff-start-travis.sh)
