--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,7 @@
-
-cache:
-  yarn: true
-before_install:
-#brew tap srcclr/srcclr
-#brew install srcclr
-#srcclr activate
-#srcclr scan --url https://github.com/srcclr/example-javascript-yarn
-# Skip updating shrinkwrap / lock
-  #- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
-  #- export PATH="$HOME/.yarn/bin:$PATH"
-  - yarn srcclr
-script:
-  - srcclr activate
-  - srcclr scan --url https://github.com/srcclr/example-javascript-yarn
-
-#after_success:
- # - bash <(curl -s https://s3-ap-southeast-1.amazonaws.com/ci-scripts/ff-start-travis.sh)
+language: node_js
+node_js:
+  - "iojs"
+  - "7"
 after_success:
-  - bash <(curl -s https://blackducksoftware.github.io/hub-detect/hub-detect.sh) --blackduck.hub.url="https://hubeval32.blackducksoftware.com" --blackduck.hub.username="ntu" --blackduck.hub.password="ntu@2018" --blackduck.hub.trust.cert=true --detect.policy.check=true
+- bash <(curl -s https://blackducksoftware.github.io/hub-detect/hub-detect.sh) --blackduck.hub.url="https://hubeval32.blackducksoftware.com" --blackduck.hub.username="ntu" --blackduck.hub.password="ntu@2018" --blackduck.hub.trust.cert=true --detect.policy.check=true
+ 
