--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,6 @@ jobs: # a collection of steps
 
       - run:
           name: install yarn
-          command: yarn install
+          command: yarn install --frozen-lockfile
       
       - run: bash <(curl -s https://scripts.scantist.com/staging/ci-circle-jar.sh)
