--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2 # use CircleCI 2.0
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
-    working_directory: ~/example-npm-circle # directory where steps will run
+    working_directory: ~/example-javascript-yarn-circle # directory where steps will run
     docker: # run the steps with Docker
       - image: timbru31/java-node # ...with this image as the primary container; this is where all `steps` will run
       #- image: mongo:3.4.4 # and this image as the secondary service container
