--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,9 @@ jobs: # a collection of steps
     docker: # run the steps with Docker
       - image: timbru31/java-node # ...with this image as the primary container; this is where all `steps` will run
       #- image: mongo:3.4.4 # and this image as the secondary service container
-      
+      commands:
+      - apk add --no-cache git
+      - yarn
       
     steps: # a collection of executable commands 
       - checkout
