--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,13 @@ jobs: # a collection of steps
       #- image: mongo:3.4.4 # and this image as the secondary service container      
     steps: # a collection of executable commands 
       - checkout
-      
-      - apk add --no-cache git
-      - yarn
 
       - run:
+         name: install git
+         command: |
+         apk add --no-cache git
+         yarn
+      
           name: install yarn
           command: yarn install --frozen-lockfile
       
