--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "A node project to demostrate srcclr scans for Yarn Repo",
   "dependencies": {
     "@google-cloud/vision": "0.8.0",
-    "jquery": "3.0.0-alpha1",
+    "jquery": "3.5.0",
     "express": "4.16.0",
     "boom": "",
     "tinymce": "4.2.3",
